--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>Hello!</h1>
+<h1>Ciao!</h1>
 
-<p>This is my first website.</p>
+<p>Das Weib versteht Kinder besser als der Mann, aber der Mann ist kindischer als das Weib.</p>
 
 </body>
 </html>
